* 0.1
    * A tiny and fast redis client for script boys.
* 0.2
    * Adjust file structure to make it easier to import redisio.
* 0.3
    * Work compatibly with ipython
    * Doctest
* 0.4
    * Reset connection to ignore replies after massive insertion.