@@ -7,3 +7,4 @@
     * Doctest
 * 0.4
     * Reset connection to ignore replies after massive insertion.
+    * Support AF_UNIX socket
